// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Red as selected 1`] = `
<div>
  <div
    className="selectedColor"
  >
    <span
      className="smallIndent"
    >
      Red
    </span>
    <i
      className="fas fa-angle-down arrow"
    />
  </div>
</div>
`;

exports[`Should render closed menu 1`] = `
<div>
  <div
    className="selectedColor"
  >
    <span
      className="smallIndent"
    />
    <i
      className="fas fa-angle-down arrow"
    />
  </div>
</div>
`;

exports[`Should render open menu 1`] = `
<div
  className="menu"
>
  <div
    className="sizeOption"
  >
    <strong
      className="smallIndent"
    >
      Please Choose A Color
    </strong>
  </div>
  <div
    className="colorOption"
    id="Black"
    onClick={[Function]}
  >
    <svg
      className="circle"
      height="30"
      width="30"
    >
      <circle
        cx="15"
        cy="15"
        fill="Black"
        r="13"
        stroke="black"
        strokeWidth="2"
      />
    </svg>
    <span
      className="colorOptionText"
    >
      Black
    </span>
  </div>
  <div
    className="colorOption"
    id="White"
    onClick={[Function]}
  >
    <svg
      className="circle"
      height="30"
      width="30"
    >
      <circle
        cx="15"
        cy="15"
        fill="White"
        r="13"
        stroke="black"
        strokeWidth="2"
      />
    </svg>
    <span
      className="colorOptionText"
    >
      White
    </span>
  </div>
  <div
    className="colorOption"
    id="Blue"
    onClick={[Function]}
  >
    <svg
      className="circle"
      height="30"
      width="30"
    >
      <circle
        cx="15"
        cy="15"
        fill="Blue"
        r="13"
        stroke="black"
        strokeWidth="2"
      />
    </svg>
    <span
      className="colorOptionText"
    >
      Blue
    </span>
  </div>
  <div
    className="colorOption"
    id="Red"
    onClick={[Function]}
  >
    <svg
      className="circle"
      height="30"
      width="30"
    >
      <circle
        cx="15"
        cy="15"
        fill="Red"
        r="13"
        stroke="black"
        strokeWidth="2"
      />
    </svg>
    <span
      className="colorOptionText"
    >
      Red
    </span>
  </div>
  <div
    className="colorOption"
    id="Green"
    onClick={[Function]}
  >
    <svg
      className="circle"
      height="30"
      width="30"
    >
      <circle
        cx="15"
        cy="15"
        fill="Green"
        r="13"
        stroke="black"
        strokeWidth="2"
      />
    </svg>
    <span
      className="colorOptionText"
    >
      Green
    </span>
  </div>
</div>
`;
